Removing the absolute stuff - causing issue on mobile. Adding mobile support

--- a/src/web/app/sass/_all.scss
+++ b/src/web/app/sass/_all.scss
@@ -5,11 +5,30 @@
 html, body {
   font-family: 'Montserrat', 'Arial', serif;
   color: #555;
+  word-wrap: break-word;
+  word-break: break-word;
+}
+
+.container > header, #content {
+  @include breakpoint(default) {
+    display: inline-block;
+    vertical-align: top;
+  }
+}
+
+.container > header {
+  margin: 8rem 0 0 6rem;
 }
 
 #content {
-  width: 40rem;
-  margin: 2rem auto;
+  width: 640px;
+  margin: 2rem;
+
+  @include breakpoint(small) {
+    width: auto;
+    padding: 1rem;
+    margin: -1rem 0 0 0;
+  }
 }
 
 h1,
@@ -21,8 +40,19 @@ nav {
   text-transform: lowercase;
 }
 
-h1 { font-size: 2.4rem; }
-h2 { font-size: 4rem; }
+h1 {
+  font-size: 2.4rem;
+  @include breakpoint(small) {
+    font-size: 2rem;
+    text-align: center;
+  }
+}
+h2 {
+  font-size: 4rem;
+  @include breakpoint(small) {
+    font-size: 3rem;
+  }
+}
 h3 { font-size: 2rem; }
 h4 { font-size: 1.3rem; }
 
@@ -45,19 +75,25 @@ ul {
   margin: 0;
 }
 
+.svisible {
+  @include opacity(0);
+}
+
 .visible {
-  z-index: 0;
   @include transition(opacity 1s, transform 0.2s);
   @include opacity(1);
   @include translate(0, 0, 0);
 }
 
 section {
-  position: absolute;
-  z-index: -1;
   @include opacity(0);
-  @include translate(-200px, 0, 0);
-
+  @include breakpoint(small) {
+    @include translate(0, -10rem, 0);
+    text-align: center;
+  }
+  @include breakpoint(default) {
+    @include translate(-10rem, 0, 0);
+  }
   font-size: 1.4rem;
 }
 
