--- a/src/web/app/sass/_projects.scss
+++ b/src/web/app/sass/_projects.scss
@@ -1,13 +1,17 @@
 #projects {
   .project {
-    margin-left: 1rem;
+    @include breakpoint(default) {
+      margin-left: 1rem;
+    }
 
     h4 {
       margin-bottom: 1rem;
     }
 
     p {
-      margin-left: 1.5rem;
+      @include breakpoint(default) {
+        margin-left: 1.5rem;
+      }
     }
   }
 }
